# big-bang

./: OS_like_Solution.md  UDSLTauri.sh  artiEqui.sh  artiMacroQuad.sh  artiRay.sh  js.md  tauri-artichoke-axum.sh
Bevy/: main.rs
Slint/: artiSlint.sh  artiSlint2.sh  artiSlint3.sh  artiSlint4.sh  artiSlint5.sh  main.rs  readme.md
bigOne/: Cargo.toml  README.md  architecture-scheme.tsx  artiBevy.sh  infos.tsx
bigOne/scripts/: ui.rb
bigOne/src/: main.rs
bigOne/src/dsl/: mod.rs  parser.rs
bigOne/src/ui/: components.rs  mod.rs  systems.rs
bigOne/src/ui/builder/: base.rs  basic_components.rs  interactive_components.rs  layout_components.rs  mod.rs
